adding re render posts

--- a/TODO
+++ b/TODO
@@ -2,8 +2,7 @@ wait for answer in stackoverflow then make the token verify to works and add pri
 change all the TS any in the project
 create a refresh token
 
-preview photo on click only
-add rerender query after delete and after upload and after new comment
 add validation to comment and post and title error
 
-change tdl direction for hebrew in the post and in the create post
+pressing to fast on submit post errors
+edit post only on post page then re render
