adding comment options:

--- a/TODO
+++ b/TODO
@@ -3,4 +3,5 @@ change all the TS any in the project
 create a refresh token
 
 add validation to comment and post and title error
-fix edit in single post
+
+add model for report and for delete
