adding validation to comments and posts

--- a/TODO
+++ b/TODO
@@ -2,6 +2,6 @@ wait for answer in stackoverflow then make the token verify to works and add pri
 change all the TS any in the project
 create a refresh token
 
-add validation to comment and post and title error
-
 add delete modal
+
+delete 2 post to fast error
