--- a/TODO
+++ b/TODO
@@ -2,6 +2,9 @@ wait for answer in stackoverflow then make the token verify to works and add pri
 change all the TS any in the project
 create a refresh token
 
+create global css colors
+add drop zone to create post
 add the the create post disapear on slide
-
+error with the likes and save 
+error with edit state comment and post
 delete 2 post to fast error
