--- a/TODO
+++ b/TODO
@@ -1,8 +1,11 @@
 wait for answer in stackoverflow then make the token verify to works and add private route to new password
 change all the TS any in the project
 create a refresh token
+delete 2 post to fast error
 
 create global css colors
-add the the create post disapear on slide
-error with the likes and save 
-delete 2 post to fast error
+create community items skeleton loading
+create community item modal skeleton loading
+add sort items options 
+add company name to modal
+
