--- a/TODO
+++ b/TODO
@@ -4,8 +4,9 @@ create a refresh token
 delete 2 post to fast error
 
 create global css colors
-create community items skeleton loading
 create community item modal skeleton loading
-add sort items options 
+add sort items options
 add company name to modal
 
+create endpoint for getting all colors and all companies and all items number for page
+change all community items Shoes to shoesw
