add user page patching

--- a/TODO
+++ b/TODO
@@ -3,6 +3,6 @@ create a refresh token
 delete 2 post to fast error
 
 create global css colors
-create community item modal skeleton loading
+upload large image not working
 
 
