add page navigation

--- a/TODO
+++ b/TODO
@@ -3,8 +3,9 @@ create a refresh token
 delete 2 post to fast error
 
 create global css colors
-upload large image not working
 
-
-
-
+fix header
+create userDropdown
+create notification
+create drawer
+change all pages name
