--- a/TODO
+++ b/TODO
@@ -4,8 +4,4 @@ delete 2 post to fast error
 
 create global css colors
 
-fix header
-create userDropdown
-create notification
-create drawer
-change all pages name
+make the title in the norification pixis 
