ffix email send register

--- a/TODO
+++ b/TODO
@@ -4,4 +4,5 @@ delete 2 post to fast error
 
 create global css colors
 
-make the title in the norification pixis 
+notification disable for not sign in users
+delte post not working
