--- a/TODO
+++ b/TODO
@@ -6,3 +6,5 @@ create global css colors
 
 notification disable for not sign in users
 delte post not working
+
+notification press if not logged in
